--- a/app/src/main/res/layout/activity_create_message.xml
+++ b/app/src/main/res/layout/activity_create_message.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:onClick="onSendMessage"
-        android:text="enviar" />
+        android:text="enviar"
+        />
 
     </LinearLayout>
